test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/intrinsics_args_type_checking/src/arith_binop_intrinsics.sw
library;

pub fn check_args() {
    let _ = __add();
    let _ = __add(42u64);
    let _ = __add((), 42u64);
    let _ = __add(42u64, 1u32);
    let _ = __add::<u64>(42u64, 1u64);
    let _ = __add::<u32>(42, 1);
}
